feat: добавить ссылки на соцсети

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <div class="info-popup__contacts">
                     <h2 class="info-popup__contacts-title">Контакты</h2>
                     <div class="info-popup__links-container">
-                        <a class="info-popup__link"><img class="info-popup__link-image" src="https://thumb.cloud.mail.ru/weblink/thumb/xw1/gPKQ/6NS2eNHHq/inst.png" alt="Instagram logo"></a>
-                        <a class="info-popup__link"><img class="info-popup__link-image" src="https://thumb.cloud.mail.ru/weblink/thumb/xw1/gPKQ/6NS2eNHHq/fb.png" alt="Facebook logo"></a>
-                        <a class="info-popup__link"><img class="info-popup__link-image" src="https://thumb.cloud.mail.ru/weblink/thumb/xw1/gPKQ/6NS2eNHHq/mail.png" alt="Mailbox logo"></a>
+                        <a class="info-popup__link" href="https://www.instagram.com/flaner.route/" target="_blank" ><img class="info-popup__link-image" src="https://thumb.cloud.mail.ru/weblink/thumb/xw1/gPKQ/6NS2eNHHq/inst.png" alt="Instagram logo"></a>
+                        <a class="info-popup__link" href="https://www.facebook.com/flaner.route/" target="_blank" ><img class="info-popup__link-image" src="https://thumb.cloud.mail.ru/weblink/thumb/xw1/gPKQ/6NS2eNHHq/fb.png" alt="Facebook logo"></a>
+                        <a class="info-popup__link" href="mailto:flanerroute@gmail.com" target="_blank" ><img class="info-popup__link-image" src="https://thumb.cloud.mail.ru/weblink/thumb/xw1/gPKQ/6NS2eNHHq/mail.png" alt="Mailbox logo"></a>
                     </div>
                 </div>
             </div>
