feat: добавить ссылку в лого

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
             </div>
-            <img class="info-popup__logo" src="https://thumb.cloud.mail.ru/weblink/thumb/xw1/gPKQ/6NS2eNHHq/%D0%A4%D0%9B%D0%90%D0%9D%D0%81%D0%A0%20%D0%BB%D0%BE%D0%B3%D0%BE.png" alt="Логотип проекта 'Фланёр'">
+            <a class="info-popup__logo-link" href="https://flanerroute.ru/"><img class="info-popup__logo" src="https://thumb.cloud.mail.ru/weblink/thumb/xw1/gPKQ/6NS2eNHHq/%D0%A4%D0%9B%D0%90%D0%9D%D0%81%D0%A0%20%D0%BB%D0%BE%D0%B3%D0%BE.png" alt="Логотип проекта 'Фланёр'"></a>
         </div>
     </div>
     <style type="text/css">
@@ -300,6 +300,11 @@
                 align-self: center;
                 justify-self: center;
             }
+        }
+
+        .info-popup__logo-link:hover {
+            opacity: 0.7;
+            transition: 0.2s ease-in;
         }
     
     </style>
